HW-8, fixed basket text alignment

--- a/src/components/basket-item/basket-item.module.css
+++ b/src/components/basket-item/basket-item.module.css
@@ -7,12 +7,11 @@
 .title {
   font-size: 16px;
   font-style: italic;
+  flex: 70%;
 }
 
 .quantity {
   font-size: 16px;
   font-style: italic;
-
-  margin-left: 30px;
   color: #666;
 }
